@@ -1,6 +1,7 @@
 package de.keksuccino.fancymenu.customization.element.elements.animationcontroller;
 
-import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.blaze3d.platform.Window;
+import de.keksuccino.fancymenu.FancyMenu;
 import de.keksuccino.fancymenu.customization.element.AbstractElement;
 import de.keksuccino.fancymenu.customization.element.ElementBuilder;
 import de.keksuccino.fancymenu.customization.element.anchor.ElementAnchorPoint;
@@ -16,9 +17,7 @@ import de.keksuccino.fancymenu.util.cycle.CommonCycles;
 import de.keksuccino.fancymenu.util.input.CharacterFilter;
 import de.keksuccino.fancymenu.util.input.InputConstants;
 import de.keksuccino.fancymenu.util.rendering.DrawableColor;
-import de.keksuccino.fancymenu.util.rendering.gui.GuiGraphics;
-import de.keksuccino.fancymenu.util.rendering.gui.GuiRenderTypes;
-import de.keksuccino.fancymenu.util.rendering.gui.ModernScreen;
+import de.keksuccino.fancymenu.util.rendering.RenderingUtils;
 import de.keksuccino.fancymenu.util.rendering.ui.UIBase;
 import de.keksuccino.fancymenu.util.rendering.ui.tooltip.Tooltip;
 import de.keksuccino.fancymenu.util.rendering.ui.widget.button.CycleButton;
@@ -33,6 +32,7 @@ import net.minecraft.client.resources.language.I18n;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.network.chat.Style;
+import net.minecraft.world.entity.schedule.Keyframe;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
@@ -114,6 +114,7 @@ public class KeyframeManagerScreen extends ModernScreen {
     protected final List<Notification> activeNotifications = new ArrayList<>();
     protected boolean isShowingSmoothingInput = false;
     protected String lastSmoothingInputValue = null;
+    protected boolean isShowingTimestampInput = false;
     protected boolean isOffsetMode = false;
 
     protected final Stack<List<AnimationKeyframe>> undoStack = new Stack<>();
@@ -129,6 +130,10 @@ public class KeyframeManagerScreen extends ModernScreen {
     protected RangeSlider recordingSpeedSlider;
     protected ExtendedButton smoothingButton;
     protected ExtendedEditBox smoothingDistanceInput;
+    protected ExtendedEditBox timestampInput;
+
+    protected int lastGuiScaleCorrectionWidth = 0;
+    protected int lastGuiScaleCorrectionHeight = 0;
 
     public KeyframeManagerScreen(AnimationControllerElement controller, Consumer<AnimationControllerMetadata> resultCallback) {
         super(Component.translatable("fancymenu.elements.animation_controller.keyframe_manager"));
@@ -247,7 +252,7 @@ public class KeyframeManagerScreen extends ModernScreen {
         this.smoothingButton = UIBase.applyDefaultWidgetSkinTo(new ExtendedButton(0, 0, buttonBaseWidth, 0,
                 Component.translatable("fancymenu.elements.animation_controller.keyframe_manager.smoothing"),
                 button -> toggleSmoothingInput()));
-        this.smoothingButton.setIsActiveSupplier(consumes -> !this.isPlaying && !this.isRecording && this.selectedKeyframes.size() > 1);
+        this.smoothingButton.setIsActiveSupplier(consumes -> !this.isPlaying && !this.isRecording && (this.selectedKeyframes.size() > 1) && !this.isShowingTimestampInput);
         this.smoothingButton.setTooltipSupplier(consumes -> Tooltip.of(LocalizationUtils.splitLocalizedLines("fancymenu.elements.animation_controller.keyframe_manager.smoothing.desc")));
         this.addBottomWidget(1, 0, this.smoothingButton);
 
@@ -293,6 +298,21 @@ public class KeyframeManagerScreen extends ModernScreen {
         this.stickyButton.setIsActiveSupplier(consumes -> ((this.selectedKeyframes.size() == 1) || this.isRecording) && !this.isOffsetMode);
         this.addBottomWidget(2, 0, this.stickyButton);
 
+        // Timestamp button
+        ExtendedButton timestampButton = UIBase.applyDefaultWidgetSkinTo(new ExtendedButton(0, 0, buttonBaseWidth, 0,
+                Component.translatable("fancymenu.elements.animation_controller.keyframe_manager.timestamp_edit"),
+                button -> toggleTimestampInput()));
+        timestampButton.setIsActiveSupplier(consumes -> !this.isPlaying && !this.isRecording && (this.selectedKeyframes.size() == 1) && !this.isShowingSmoothingInput);
+        timestampButton.setTooltipSupplier(consumes -> Tooltip.of(LocalizationUtils.splitLocalizedLines("fancymenu.elements.animation_controller.keyframe_manager.timestamp_edit.desc")));
+        this.addBottomWidget(2, 0, timestampButton);
+
+        // Preview moving toggle
+        CycleButton<?> previewMovingButton = new CycleButton<>(0, 0, buttonBaseWidth + 65, 0,
+                CommonCycles.cycleEnabledDisabled("fancymenu.elements.animation_controller.keyframe_manager.move_preview_with_arrow_keys", FancyMenu.getOptions().arrowKeysMovePreview.getValue()),
+                (value, button) -> FancyMenu.getOptions().arrowKeysMovePreview.setValue(value.getAsBoolean()));
+        previewMovingButton.setTooltipSupplier(consumes -> Tooltip.of(LocalizationUtils.splitLocalizedLines("fancymenu.elements.animation_controller.keyframe_manager.move_preview_with_arrow_keys.desc")));
+        this.addBottomWidget(2, 0, previewMovingButton);
+
         // ---------------------------------------------------------
 
         // Smoothing input box
@@ -315,8 +335,46 @@ public class KeyframeManagerScreen extends ModernScreen {
 
         // ---------------------------------------------------------
 
+        // Timestamp input box
+        this.timestampInput = new ExtendedEditBox(Minecraft.getInstance().font, (this.width / 2) - 50, this.stickyButton.getY() - 40, 100, 20, Component.empty()) {
+            @Override
+            public void renderWidget(@NotNull GuiGraphics graphics, int mouseX, int mouseY, float partial) {
+                MutableComponent c = Component.translatable("fancymenu.elements.animation_controller.keyframe_manager.timestamp_edit.input");
+                int cW = Minecraft.getInstance().font.width(c);
+                graphics.drawString(Minecraft.getInstance().font, c,
+                        this.getX() + (this.getWidth() / 2) - (cW / 2), this.getY() - Minecraft.getInstance().font.lineHeight - 5, UIBase.getUIColorTheme().generic_text_base_color.getColorInt(), false);
+                super.renderWidget(graphics, mouseX, mouseY, partial);
+            }
+        };
+        this.timestampInput.setCharacterFilter(CharacterFilter.buildIntegerFiler());
+        this.timestampInput.setIsVisibleSupplier(consumes -> this.isShowingTimestampInput);
+        this.timestampInput.setMaxLength(20);
+        UIBase.applyDefaultWidgetSkinTo(this.timestampInput);
+        this.addRenderableWidget(this.timestampInput);
+
+        // ---------------------------------------------------------
+
         if (!isPlaying && !isRecording) {
             updateTimelineDurationToMaxTimestamp();
+        }
+
+        AbstractWidget farRightWidget = previewMovingButton;
+        Window window = Minecraft.getInstance().getWindow();
+        boolean resized = (window.getScreenWidth() != this.lastGuiScaleCorrectionWidth) || (window.getScreenHeight() != this.lastGuiScaleCorrectionHeight);
+        this.lastGuiScaleCorrectionWidth = window.getScreenWidth();
+        this.lastGuiScaleCorrectionHeight = window.getScreenHeight();
+        boolean tooFarRight = (farRightWidget.getX() + farRightWidget.getWidth()) >= (this.width - 100);
+
+        //Adjust GUI scale to make all buttons fit in the screen
+        if (tooFarRight && (window.getGuiScale() > 1)) {
+            double newScale = window.getGuiScale();
+            newScale--;
+            if (newScale < 1) newScale = 1;
+            window.setGuiScale(newScale);
+            this.resize(Minecraft.getInstance(), window.getGuiScaledWidth(), window.getGuiScaledHeight());
+        } else if (!tooFarRight && resized) {
+            RenderingUtils.resetGuiScale();
+            this.resize(Minecraft.getInstance(), window.getGuiScaledWidth(), window.getGuiScaledHeight());
         }
 
     }
@@ -351,6 +409,7 @@ public class KeyframeManagerScreen extends ModernScreen {
     @Override
     public void render(@NotNull GuiGraphics graphics, int mouseX, int mouseY, float partial) {
 
+
         if (this.isShowingSmoothingInput) {
             if (!this.smoothingDistanceInput.isFocused()) {
                 this.smoothingDistanceInput.setFocusable(true);
@@ -361,6 +420,18 @@ public class KeyframeManagerScreen extends ModernScreen {
                 this.smoothingDistanceInput.setFocused(false);
                 this.setFocused(null);
             }
+        }
+
+        if (this.isShowingTimestampInput && (this.selectedKeyframes.size() != 1)) {
+            this.isShowingTimestampInput = false;
+        }
+        if (this.isShowingTimestampInput) {
+            if (!this.timestampInput.isFocused()) {
+                this.timestampInput.setFocusable(true);
+                this.setFocused(this.timestampInput);
+            }
+        } else {
+            if (this.timestampInput == this.getFocused()) this.clearFocus();
         }
 
         long actualEndTime = timelineDuration - TIMELINE_PADDING_DURATION;
@@ -439,7 +510,7 @@ public class KeyframeManagerScreen extends ModernScreen {
 
         // Apply interpolated values to preview element
         if ((this.isPlaying || this.isDraggingProgress) && (currentFrame != null) && (nextFrame != null)) {
-            this.setSelectedKeyframe(null);
+            this.selectKeyframeClearOldSelection(null);
             float progress = (float)(currentPlayOrRecordPosition - currentFrame.timestamp) / (float)(nextFrame.timestamp - currentFrame.timestamp);
 
             if (this.isOffsetMode) {
@@ -802,6 +873,13 @@ public class KeyframeManagerScreen extends ModernScreen {
             }
         }
 
+        if (this.isShowingTimestampInput) {
+            // Check if click is outside the input box
+            if (!this.timestampInput.isMouseOver(mouseX, mouseY)) {
+                this.isShowingTimestampInput = false;
+            }
+        }
+
         if (this.previewEditorElement.mouseClicked(mouseX, mouseY, button)) return true;
 
         // Handle clicking progress line
@@ -819,7 +897,7 @@ public class KeyframeManagerScreen extends ModernScreen {
         int clickedIndex = getKeyframeIndexAtPosition((int)mouseX, (int)mouseY);
         // Handle clicking empty timeline area to deselect frames
         if (!Screen.hasControlDown() && isInTimelineArea((int)mouseX, (int)mouseY) && (clickedIndex == -1)) {
-            this.setSelectedKeyframe(null);
+            this.selectKeyframeClearOldSelection(null);
             return true;
         }
         if (this.isRecording && !this.isRecordingPaused && (clickedIndex >= 0)) {
@@ -836,7 +914,7 @@ public class KeyframeManagerScreen extends ModernScreen {
                 this.lastCtrlClickedFrameForDeselect = keyframe;
             } else {
                 // Handle CTRL-click for multi-select
-                this.setSelectedKeyframe(workingKeyframes.get(clickedIndex), Screen.hasControlDown());
+                this.selectKeyframe(workingKeyframes.get(clickedIndex), Screen.hasControlDown());
             }
             return true;
         }
@@ -861,12 +939,12 @@ public class KeyframeManagerScreen extends ModernScreen {
             if (this.selectedKeyframes.size() > 1) {
                 this.selectedKeyframes.remove(this.lastCtrlClickedFrameForDeselect);
                 if (this.selectedKeyframes.size() == 1) {
-                    AnimationKeyframe lastSelected = this.selectedKeyframes.get(0);
-                    this.setSelectedKeyframe(null); // first clear all
-                    this.setSelectedKeyframe(lastSelected); // then properly single-select the frame again
+                    AnimationKeyframe lastSelected = this.selectedKeyframes.getFirst();
+                    this.selectKeyframeClearOldSelection(null); // first clear all
+                    this.selectKeyframeClearOldSelection(lastSelected); // then properly single-select the frame again
                 }
             } else {
-                this.setSelectedKeyframe(null);
+                this.selectKeyframeClearOldSelection(null);
             }
         }
         this.lastCtrlClickedFrameForDeselect = null;
@@ -904,16 +982,32 @@ public class KeyframeManagerScreen extends ModernScreen {
             }
         }
 
+        // Handle timestamp input shortcuts
+        if (this.isShowingTimestampInput && this.timestampInput.isFocused()) {
+            if (keyCode == InputConstants.KEY_ENTER) {
+                this.saveState();
+                if ((this.selectedKeyframes.size() == 1) && MathUtils.isLong(this.timestampInput.getValue())) {
+                    this.selectedKeyframes.get(0).timestamp = Long.parseLong(this.timestampInput.getValue());
+                }
+                this.isShowingTimestampInput = false;
+                updateTimelineDurationToMaxTimestamp();
+                return true;
+            } else if (keyCode == InputConstants.KEY_ESCAPE) {
+                this.isShowingTimestampInput = false;
+                return true;
+            }
+        }
+
         // Select all keyframes
         if (!this.isRecording || this.isRecordingPaused) {
             if (Screen.hasControlDown() && (keyCode == InputConstants.KEY_A)) {
-                this.setSelectedKeyframe(null);
-                this.workingKeyframes.forEach(keyframe -> this.setSelectedKeyframe(keyframe, true));
+                this.selectKeyframeClearOldSelection(null);
+                this.workingKeyframes.forEach(keyframe -> this.selectKeyframe(keyframe, true));
             }
         }
 
         // Handle arrow keys for selected keyframes
-        if (!this.selectedKeyframes.isEmpty()) {
+        if (!this.selectedKeyframes.isEmpty() && !FancyMenu.getOptions().arrowKeysMovePreview.getValue()) {
             if (keyCode == KEY_MOVE_KEYFRAME_LEFT || keyCode == KEY_MOVE_KEYFRAME_RIGHT) {
                 saveState(); // Save state before modifying timestamp
 
@@ -949,6 +1043,26 @@ public class KeyframeManagerScreen extends ModernScreen {
                     });
                     updateTimelineDurationToMaxTimestamp();
                 }
+                return true;
+            }
+        } else if (FancyMenu.getOptions().arrowKeysMovePreview.getValue() && (this.selectedKeyframes.size() == 1) && (!this.isRecording || this.isRecordingPaused) && !this.isPlaying) {
+            if ((keyCode == InputConstants.KEY_LEFT) || (keyCode == InputConstants.KEY_RIGHT) || (keyCode == InputConstants.KEY_UP) || (keyCode == InputConstants.KEY_DOWN)) {
+                this.saveState();
+                this.isShowingTimestampInput = false;
+                this.isShowingSmoothingInput = false;
+                if (keyCode == InputConstants.KEY_LEFT) {
+                    this.previewElement.posOffsetX -= 1;
+                }
+                if (keyCode == InputConstants.KEY_RIGHT) {
+                    this.previewElement.posOffsetX += 1;
+                }
+                if (keyCode == InputConstants.KEY_UP) {
+                    this.previewElement.posOffsetY -= 1;
+                }
+                if (keyCode == InputConstants.KEY_DOWN) {
+                    this.previewElement.posOffsetY += 1;
+                }
+                this.applyElementValuesToKeyframe(this.previewElement, this.selectedKeyframes.get(0));
                 return true;
             }
         }
@@ -1033,7 +1147,7 @@ public class KeyframeManagerScreen extends ModernScreen {
         isPlaying = !isPlaying;
         if (isPlaying) {
             playStartTime = System.currentTimeMillis() - currentPlayOrRecordPosition;
-            this.setSelectedKeyframe(null);
+            this.selectKeyframeClearOldSelection(null);
             draggingKeyframeIndex = -1;
             this.displayNotification(PLAYING_STARTED_TEXT, 2000);
         } else {
@@ -1057,7 +1171,7 @@ public class KeyframeManagerScreen extends ModernScreen {
         // Calculate the corrected start time based on current position and speed
         // This ensures recording starts at the correct position when speed < 100%
         recordStartTime = System.currentTimeMillis() - (long)(currentPlayOrRecordPosition / recordingSpeed);
-        this.setSelectedKeyframe(null);
+        this.selectKeyframeClearOldSelection(null);
         draggingKeyframeIndex = -1;
         previewEditorElement.setSelected(true);
     }
@@ -1066,7 +1180,7 @@ public class KeyframeManagerScreen extends ModernScreen {
         isRecording = false;
         isRecordingPaused = false;
         recordStartTime = -1;
-        this.setSelectedKeyframe(null);
+        this.selectKeyframeClearOldSelection(null);
         // Reset play position to start
         currentPlayOrRecordPosition = 0;
         // Reset timeline duration if needed
@@ -1099,7 +1213,7 @@ public class KeyframeManagerScreen extends ModernScreen {
                     long now = System.currentTimeMillis();
                     this.recordStartTime = now - (long) (this.currentPlayOrRecordPosition / newSpeed);
                 }
-                this.setSelectedKeyframe(null);
+                this.selectKeyframeClearOldSelection(null);
                 this.isRecordingPaused = false;
             } else {
                 this.isRecordingPaused = true;
@@ -1171,9 +1285,9 @@ public class KeyframeManagerScreen extends ModernScreen {
     protected void deleteSelectedKeyframes() {
         if (!this.selectedKeyframes.isEmpty()) {
             saveState();
-            this.selectedKeyframes.forEach(selectedKeyframe -> {
+            new ArrayList<>(this.selectedKeyframes).forEach(selectedKeyframe -> {
                 workingKeyframes.remove(selectedKeyframe);
-                this.setSelectedKeyframe(null);
+                this.selectKeyframeClearOldSelection(null);
                 updateTimelineDurationToMaxTimestamp();
                 this.displayNotification(KEYFRAME_DELETED_TEXT, 2000);
             });
@@ -1199,7 +1313,7 @@ public class KeyframeManagerScreen extends ModernScreen {
             // Pop and apply state from undo stack
             workingKeyframes.clear();
             workingKeyframes.addAll(undoStack.pop());
-            this.setSelectedKeyframe(null);
+            this.selectKeyframeClearOldSelection(null);
             updateTimelineDurationToMaxTimestamp();
         }
         if (!selected.isEmpty() && !this.isRecording) {
@@ -1211,7 +1325,7 @@ public class KeyframeManagerScreen extends ModernScreen {
                         break;
                     }
                 }
-                this.setSelectedKeyframe(frame, true);
+                this.selectKeyframe(frame, true);
             });
         }
     }
@@ -1226,7 +1340,7 @@ public class KeyframeManagerScreen extends ModernScreen {
             // Pop and apply state from redo stack
             workingKeyframes.clear();
             workingKeyframes.addAll(redoStack.pop());
-            this.setSelectedKeyframe(null);
+            this.selectKeyframeClearOldSelection(null);
             updateTimelineDurationToMaxTimestamp();
         }
         if (!selected.isEmpty() && !this.isRecording) {
@@ -1238,12 +1352,12 @@ public class KeyframeManagerScreen extends ModernScreen {
                         break;
                     }
                 }
-                this.setSelectedKeyframe(frame, true);
+                this.selectKeyframe(frame, true);
             });
         }
     }
 
-    protected void setSelectedKeyframe(@Nullable AnimationKeyframe selected, boolean addToSelection) {
+    protected void selectKeyframe(@Nullable AnimationKeyframe selected, boolean addToSelection) {
 
         if (!addToSelection) {
             // Clear previous selection if not adding to it
@@ -1286,8 +1400,8 @@ public class KeyframeManagerScreen extends ModernScreen {
 
     }
 
-    protected void setSelectedKeyframe(@Nullable AnimationKeyframe selected) {
-        setSelectedKeyframe(selected, false);
+    protected void selectKeyframeClearOldSelection(@Nullable AnimationKeyframe keyframe) {
+        selectKeyframe(keyframe, false);
     }
 
     protected void toggleSmoothingInput() {
@@ -1298,6 +1412,15 @@ public class KeyframeManagerScreen extends ModernScreen {
             if (this.smoothingDistanceInput.getValue().isBlank()) {
                 this.smoothingDistanceInput.setValue("100"); //Default value
             }
+        }
+    }
+
+    protected void toggleTimestampInput() {
+        if (this.selectedKeyframes.size() != 1) return;
+        AnimationKeyframe selected = this.selectedKeyframes.get(0);
+        this.isShowingTimestampInput = !this.isShowingTimestampInput;
+        if (this.isShowingTimestampInput) {
+            this.timestampInput.setValue("" + selected.timestamp);
         }
     }
 
